--- a/style.css
+++ b/style.css
@@ -1,8 +1,57 @@
-h1 {
-    text-align: center;
-    color: aqua;
+.container {max-width: 1024px;}
+.container {margin: auto;}
+
+.container{
+    background-color: red;
+    margin: 40px;
+    padding: 20px;
+    border-radius: 30px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
+
+#navbar {
+    background-color:orange;
+    color: red;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px;
+    font-size: 24px;
+    font-weight: bold;
+    border-radius: 20px;
+}
+#navbar a {
+    color: red;
+    text-decoration: none;
+
+}
+#navbar ul {
+    display: flex;
+    list-style: none;
+    align-items: center;
+}
+#navbar ul li a {
+    padding: 10px;
+    margin: 0 4px;
+}
+#navbar ul li a:hover {
+    background-color: white;
+    border-radius: 5px;
+}
+.idecko {max-width: 1024px;}
+.idecko {margin: auto;}
+
+.idecko{
+    background-color: rgb(213, 0, 0);
+    color: orange;
+    border-radius: 20px;
+    padding: 20px;
+    font-size: 16px;
+
+}
+
 img {
-	width: 300px;
+	align-items: center;
+    width: 300px;
 	border-radius: 10% 10% 10% 10%;
 }
