Top stránka co říct

--- a/style.css
+++ b/style.css
@@ -126,3 +126,20 @@ body {
     gap: 1.25rem; 
   }
 }
+
+footer {
+  text-align: center;
+  padding: 1rem;
+  background-color: rgb(213, 0, 0);
+  color: #ffd700;
+  font-size: 0.9rem;
+  border-radius: 10px;
+  margin-top: 1.5rem;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
