--- a/style.css
+++ b/style.css
@@ -68,6 +68,9 @@ body {
     border-radius: 20px;
     padding: 20px;
     font-size: 16px;
+    width: 90%;
+    margin: 0 auto;
+    max-width: 600px;
 }
 
 .obsah img {
