--- a/style.css
+++ b/style.css
@@ -68,9 +68,8 @@ body {
     border-radius: 20px;
     padding: 20px;
     font-size: 16px;
-    width: 90%;
-    margin: 0 auto;
-    max-width: 600px;
+    box-sizing: border-box; /* ← přidat */
+    
 }
 
 .obsah img {
@@ -146,3 +145,4 @@ img {
   display: block;
   margin: 0 auto;
 }
+
